เเก้ปัญหา menu